-- For further documentation, see http://haskell.org/cabal/users-guide/

name:                vanpool
version:             0.1.0.0
synopsis:            A van pool cordinator
-- description:         
homepage:            https://github.com/justgage/vanpool
license:             MIT
license-file:        LICENSE
author:              Gage Peterson
maintainer:          gpeterson@instructure.com
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable vanpool
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base == 4.8.*
                       , wai
                       , warp
                       , http-types
                       , resourcet
                       , scotty
                       , text
                       , bytestring
                       , blaze-html
                       , persistent
                       , persistent-template
                       , persistent-sqlite
                       , persistent-postgresql
                       , monad-logger
                       , heroku
                       , transformers
                       , wai-middleware-static
                       , wai-extra
                       , time
